# FluidX3D-2.16-python

./: .git-meta  .pypirc_template  MANIFEST.in  PHASE2_SUMMARY.md  PUBLISHING.md  PYTHON_MODULE_STATUS.md  QUICK_START.md  README.md  README_PYPI.md  airship_test.py  build_and_test.bat  build_python_module.bat  build_wheels.bat  buildme.bat  fluidx3d.py  manual_build.bat  manual_build2.bat  pyproject.toml  setup.py  test_graphics_quick.py  test_module.py  test_phase2.py  test_phase3_minimal.py  test_phase3_simple.py  test_phase3_wing.py
src/: defines.hpp  fluidx3d.cp314-win_amd64.pyd  graphics.cpp  info.cpp  kernel.cpp  kernel.hpp  lbm.cpp  lbm.hpp  main.cpp  python_bindings_full.cpp  setup.cpp  utilities.hpp
src/fluidx3d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
